--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,12 @@ ccxt==4.4.88
 keras==3.10.0
 numpy==2.2.6
 pandas==2.2.3
+plotly==6.1.2
 scikit-learn==1.6.1
 streamlit==1.45.1
 ta==0.11.0
 tensorflow==2.19.0
+
+#66c2a5
+#fc8d62
+#8da0cb
