--- a/requirements.txt
+++ b/requirements.txt
@@ -7,7 +7,8 @@ scikit-learn==1.6.1
 streamlit==1.45.1
 ta==0.11.0
 tensorflow==2.19.0
-
-#66c2a5
-#fc8d62
-#8da0cb
+joblib>=1.3.0
+fastapi>=0.100.0
+uvicorn>=0.23.0
+pydantic>=2.0.0
+python-multipart>=0.0.6
