--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,11 @@
 ccxt==4.4.88
 keras==3.10.0
+matplotlib==3.10.3
 numpy==2.2.6
 pandas==2.2.3
 plotly==6.1.2
 scikit-learn==1.6.1
+seaborn==0.13.2
 streamlit==1.45.1
 ta==0.11.0
 tensorflow==2.19.0
